--- a/about_us.html
+++ b/about_us.html
@@ -2,6 +2,7 @@
 <html>
   <title>About Us</title>
   <body>
+    <link rel="stylesheet" href="./style.css"/>
     <!-- This is the @head and it will encompass our logo and our navigation bar -->
     <head>
       <div>
@@ -33,7 +34,14 @@
 
     <!-- This is our main and it will encompass all our content for the landing page for our site -->
     <main style="height: 100vh; background-color: #c9c4c4">
-      <h1>Hardworking individual aspiring to become a full stack developer :)</h1>
+      <h1>About me</h1>
+      <ul left-align>
+        <li>Personal information: Tshepiso Moloko</li>
+        <li>Education background: BSc Computer Science</li>
+        <li>Projects done: Made my own uber app</li>
+        <li>Working experience: Intern at WeThinkCode</li>
+        <li>Interesting information for employers: Hardworking individual aspiring to become a full stack developer :)</li>
+      </ul>
     </main>
 
     <!-- This is our footer and it will encompass all the quick links on our website.-->
