--- a/contact_us.html
+++ b/contact_us.html
@@ -2,6 +2,7 @@
 <html>
   <title>Contact Us</title>
   <body>
+    <link rel="stylesheet" href="./style.css"/>
     <!-- This is the @head and it will encompass our logo and our navigation bar -->
     <head>
       <div>
@@ -33,7 +34,22 @@
 
     <!-- This is our main and it will encompass all our content for the landing page for our site -->
     <main style="height: 100vh; background-color: rgb(221, 228, 228)">
-      <h1>Contact me on 061 012 7228</h1>
+      <h1>City and province: Carletonville, Gauteng</h1>
+      <h1>Contact Us</h1>
+      <ul>
+        <li>Name and Surname
+          <input type="text" placeholder="Name and Surname">
+        </li>
+        <li>Email
+          <input type="text" placeholder="Email Address">
+        </li>
+        <li>Message
+          <textarea name="myTextArea" placeholder="Enter your message here"></textarea>
+        </li>
+        <li>
+          <button type="text" placeholder="Submit">Submit</button>
+        </li>
+      </ul>
     </main>
 
     <!-- This is our footer and it will encompass all the quick links on our website.-->
