--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <title>Tshepiso Moloko</title>
   <body>
+    <link rel="stylesheet" href="./style.css"/>
     <!-- This is the @head and it will encompass our logo and our navigation bar -->
     <head>
       <div>
@@ -30,35 +31,6 @@
                 <a href="contact_us.html">Contact Us</a>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js">
 	              </script>
-                <style>
-                  body{
-                  padding:10% 3% 10% 3%;
-                  text-align:center;
-                  }
-                  img{
-                    height:140px;
-                      width:140px;
-                  }
-                  h1{
-                  color: #32a852;
-                  }
-                  .mode {
-                    float:right;
-                  }
-                  .change {
-                    cursor: pointer;
-                    border: 1px solid #555;
-                    border-radius: 40%;
-                    width: 20px;
-                    text-align: center;
-                    padding: 5px;
-                    margin-left: 8px;
-                  }
-                  .dark{
-                    background-color: #222;
-                    color: #e6e6e6;
-                  }
-                </style>
               </nav>
             </td>
           </tr>
@@ -82,13 +54,10 @@
       <table style="width: 100%; height: 300px">
         <tr>
           <td colspan="2">
-            <img
-              src="assets/imgs/logo-1933884__340.jpeg"
-              width="100%"
-              height="600px"
-              alt=""
-              style="object-fit: cover"
-            />
+            <video width="100%" height="500px" style="object-fit: cover" controls="autoplay" autoplay>
+              <source src="./assets/video/Jellyfish - 110877.mp4">
+              Your browser does not support the video tag.
+            </video>    
           </td>
         </tr>
         <tr>
