--- a/about_us.html
+++ b/about_us.html
@@ -35,13 +35,10 @@
     <!-- This is our main and it will encompass all our content for the landing page for our site -->
     <main style="height: 100vh; background-color: #c9c4c4">
       <h1>About me</h1>
-      <ul left-align>
-        <li>Personal information: Tshepiso Moloko</li>
-        <li>Education background: BSc Computer Science</li>
-        <li>Projects done: Made my own uber app</li>
-        <li>Working experience: Intern at WeThinkCode</li>
-        <li>Interesting information for employers: Hardworking individual aspiring to become a full stack developer :)</li>
-      </ul>
+      <div>
+        <script src = "./index.js"></script>
+        <div id = "listItems"></div>
+      </div>
     </main>
 
     <!-- This is our footer and it will encompass all the quick links on our website.-->
