--- a/contact_us.html
+++ b/contact_us.html
@@ -36,20 +36,26 @@
     <main style="height: 100vh; background-color: rgb(221, 228, 228)">
       <h1>City and province: Carletonville, Gauteng</h1>
       <h1>Contact Us</h1>
-      <ul>
-        <li>Name and Surname
-          <input type="text" placeholder="Name and Surname">
-        </li>
-        <li>Email
-          <input type="text" placeholder="Email Address">
-        </li>
-        <li>Message
-          <textarea name="myTextArea" placeholder="Enter your message here"></textarea>
-        </li>
-        <li>
-          <button type="text" placeholder="Submit">Submit</button>
-        </li>
-      </ul>
+
+      <form
+        action="https://formspree.io/f/xwkjoqpz"
+        method="POST"
+      >
+        <ul>
+          <li>Name and Surname
+            <input type="text" placeholder="Name and Surname">
+          </li>
+          <li>Email
+            <input type="email" placeholder="Email Address" name="email">
+          </li>
+          <li>Message
+            <textarea name="myTextArea" placeholder="Enter your message here"></textarea>
+          </li>
+          <li>
+            <button type="text" placeholder="Submit">Submit</button>
+          </li>
+        </ul>
+      </form>
     </main>
 
     <!-- This is our footer and it will encompass all the quick links on our website.-->
